# ADD_SUBDIRECTORY(mplayer)
ADD_SUBDIRECTORY(vlc)
# ADD_SUBDIRECTORY(xine)
# ADD_SUBDIRECTORY(ffmpeg)
ADD_SUBDIRECTORY(AlsaSink)
ADD_SUBDIRECTORY(QtSink)
ADD_SUBDIRECTORY(SdlSink)

SET(CMAKE_LIBRARY_PATH
${CMAKE_SYSTEM_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_POCO_UTIL
NAME PocoUtil
PATHS ${CMAKE_LIBRARY_PATH}
)

if(TARGET omm)
SET(LIB_OMM_AV
ommav
)
INCLUDE_DIRECTORIES(
${omm_SOURCE_DIR}/lib
)
else(TARGET omm)
FIND_LIBRARY(LIB_OMM_AV
NAME ommav
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET omm)

SET( OMMR_SRCS
MediaRendererApplication.cpp
)

ADD_EXECUTABLE( ommr
${OMMR_SRCS}
)

TARGET_LINK_LIBRARIES( ommr
${LIB_OMM_AV}
${LIB_POCO_UTIL}
)

INSTALL( TARGETS ommr
RUNTIME DESTINATION bin
)
