ADD_SUBDIRECTORY(Storage)
ADD_SUBDIRECTORY(Web)
ADD_SUBDIRECTORY(Dvb)
ADD_SUBDIRECTORY(vdr-upnp)

SET(CMAKE_LIBRARY_PATH
${CMAKE_SYSTEM_LIBRARY_PATH}
)

if(TARGET omm)
SET(LIB_OMM_AV
ommav
)
INCLUDE_DIRECTORIES(
${omm_SOURCE_DIR}/lib
)
else(TARGET omm)
FIND_LIBRARY(LIB_OMM_AV
NAME ommav
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET omm)


SET( OMMS_SRCS
UpnpAvServerApplication.cpp
)

ADD_EXECUTABLE( omms
${OMMS_SRCS}
)

TARGET_LINK_LIBRARIES( omms
${LIB_OMM_AV}
${LIB_POCO_UTIL}
# omms-av-dvb
)

INSTALL( TARGETS omms
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)
