# ADD_SUBDIRECTORY(Storage)
# ADD_SUBDIRECTORY(Web)
# ADD_SUBDIRECTORY(Dvb)
# ADD_SUBDIRECTORY(vdr-upnp)

SET(CMAKE_LIBRARY_PATH
${CMAKE_SYSTEM_LIBRARY_PATH}
)

if(TARGET omm)
SET(LIB_OMM_AV
ommav
)
SET(LIB_OMM_UTIL
ommutil
)
INCLUDE_DIRECTORIES(
${omm_SOURCE_DIR}/lib
)
else(TARGET omm)
FIND_LIBRARY(LIB_OMM_AV
NAME ommav
PATHS ${CMAKE_LIBRARY_PATH}
)
FIND_LIBRARY(LIB_OMM_UTIL
NAME ommutil
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET omm)

SET( OMMS_TEST_SRCS
TestServer.cpp
)

ADD_LIBRARY( ommserver-test
SHARED
${OMMS_TEST_SRCS}
)

TARGET_LINK_LIBRARIES( ommserver-test
${LIB_OMM_AV}
)

SET( OMMS_SRCS
UpnpAvServerApplication.cpp
)

ADD_EXECUTABLE( ommserve
${OMMS_SRCS}
)

TARGET_LINK_LIBRARIES( ommserve
${LIB_OMM_AV}
${LIB_OMM_UTIL}
${LIB_POCO_UTIL}
)

INSTALL( TARGETS ommserve
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)
