if(WINDOWS)
set(BUILD_SHARED_LIBS FALSE)
endif(WINDOWS)

get_property(BUILD_PLUGINS
GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS)

set(OMMX_SRC_INCLUDE_DIR
${CMAKE_CURRENT_SOURCE_DIR}/include/Omm/X
)

include_directories(
${OMMX_SRC_INCLUDE_DIR}
)

include(DescendDirectories)
descend_directories()

set(OMMX_FOUND 1
CACHE INTERNAL OMMX_FOUND
)

install(DIRECTORY ${OMMX_SRC_INCLUDE_DIR}
DESTINATION include/Omm
FILES_MATCHING PATTERN "*.h"
)
