SET(CMAKE_LIBRARY_PATH
${CMAKE_SYSTEM_LIBRARY_PATH}
)

FIND_LIBRARY(LIB_PLATINUM_UPNP
NAME platinum-upnp
PATHS ${CMAKE_LIBRARY_PATH}
)

SET( LSUPNP_SRCS
main.cpp
lsupnp.cpp
)

ADD_EXECUTABLE( lsupnp
${LSUPNP_SRCS}
)

TARGET_LINK_LIBRARIES( lsupnp
${LIB_PLATINUM_UPNP}
pthread
dl
)

ADD_DEFINITIONS(
# -D_REENTRANT -DQT_NO_DEBUG -DQT_NO_DEBUG_OUTPUT -DQT_NO_WARNING_OUTPUT -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED
)

INSTALL( TARGETS lsupnp
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib
)
