#SET(CMAKE_LIBRARY_PATH
#${CMAKE_SYSTEM_LIBRARY_PATH}
#)

FIND_PACKAGE(Qt4)

FIND_PATH(POCO_INCLUDE_DIR
Poco/Poco.h
PATHS ${CMAKE_INCLUDE_PATH}
)

FIND_LIBRARY(LIB_POCO_FOUNDATION
NAME PocoFoundation
PATHS ${CMAKE_LIBRARY_PATH}
)

if(QT4_FOUND AND POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)
MESSAGE (STATUS "Qt4 use file: ${QT_USE_FILE}")
INCLUDE(
${QT_USE_FILE}
)
#message(STATUS "Qt4 found in " ${QT4_INCLUDE_DIR})
message(STATUS "Poco headers found in " ${POCO_INCLUDE_DIR})
INCLUDE_DIRECTORIES(
${POCO_INCLUDE_DIR}
)

if(TARGET omm)
SET(LIB_OMM
omm
)
SET(LIB_OMM_AV
ommav
)
INCLUDE_DIRECTORIES(
${omm_SOURCE_DIR}/lib
)
else(TARGET omm)
FIND_LIBRARY(LIB_OMM
NAME omm
PATHS ${CMAKE_LIBRARY_PATH}
)
FIND_LIBRARY(LIB_OMM_AV
NAME ommav
PATHS ${CMAKE_LIBRARY_PATH}
)
endif(TARGET omm)

SET( OMMC_QTUI_SRCS
ControllerGui.cpp
# # modeltest.cpp
UpnpBrowserModel.cpp
UpnpRendererListModel.cpp
)

SET( OMMC_QTUI
# settings.ui
ControllerGui.ui
)

SET( OMMC_QTUI_MOC
ControllerGui.h
# modeltest.h
UpnpBrowserModel.h
UpnpRendererListModel.h
)

QT4_WRAP_UI(
OMMC_QTUI_H ${OMMC_QTUI}
)

GET_FILENAME_COMPONENT(
OMMC_QTUI_H_DIR ${OMMC_QTUI_H} PATH
)

MESSAGE( STATUS
"Directory for OmmC Qt UI files: ${OMMC_QTUI_H_DIR}"
)

INCLUDE_DIRECTORIES(
${OMMC_QTUI_H_DIR}
)

QT4_WRAP_CPP(
OMMC_QTUI_MOC_CPP ${OMMC_QTUI_MOC}
)

ADD_LIBRARY( ommavinterface-qt
SHARED
${OMMC_QTUI_SRCS}
${OMMC_QTUI}
${OMMC_QTUI_MOC_CPP}
)

TARGET_LINK_LIBRARIES( ommavinterface-qt
${LIB_OMM}
${LIB_OMM_AV}
${QT_LIBRARIES}
${LIB_POCO_FOUNDATION}
)

ADD_DEFINITIONS(
# -D_REENTRANT -DQT_NO_DEBUG -DQT_NO_DEBUG_OUTPUT -DQT_NO_WARNING_OUTPUT -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_SHARED
)


INSTALL( TARGETS ommavinterface-qt
RUNTIME DESTINATION bin
LIBRARY DESTINATION lib/omm
ARCHIVE DESTINATION lib/omm
)

else(QT4_FOUND AND POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)
if(POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)
message(STATUS "Qt4 not found")
else(POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)
message(STATUS "Poco not found")
endif(POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)
endif(QT4_FOUND AND POCO_INCLUDE_DIR AND LIB_POCO_FOUNDATION)

